# nir

./: README.md  dual_control.py  warehouse_with_iris.sdf
ardupilot/: mav.parm  mav.tlog  mav.tlog.raw  tasklist.json
ardupilot/ArduCopter/: mav.parm  mav.tlog  mav.tlog.raw
fast_lio/: CMakeLists.txt
fast_lio/Log/: mat_pre.txt
fast_lio/config/: avia.yaml  horizon.yaml  mid360.yaml
fast_lio/launch/: fastlio_mid360.launch.py  mapping.launch.py
livox_ros_driver2/: package.xml
my_octomap_tools/: CMakeLists.txt  package.xml
my_octomap_tools/src/: load_octomap_node.cpp  path_follower_node.cpp  rrt_3d_planner.cpp  save_octomap_node.cpp
